<resources>
    <string name="app_name">Foodland</string>
    <string name="login">Login</string>
    <string name="your_favourite_restaurant_awaits">Your favourite restaurant awaits!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="or_sign_in_with_e_mail">or sign in with e-mail</string>
    <string name="or_sign_up_with_e_mail">or sign up with e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="search">Search</string>
    <string name="add_to_basket">Add</string>
    <string name="detail">Detail</string>
    <string name="price">Price</string>
    <string name="none">None</string>
    <string name="lower">Lower</string>
    <string name="higher">Higher</string>
    <string name="all">All</string>
    <string name="meals">Meals</string>
    <string name="drinks">Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="pizza">Pizza</string>
    <string name="confirm_basket">Confirm Basket</string>
    <string name="basket">Basket</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="i_accept_the_agreement">I accept the agreement</string>
    <string name="pay">Pay</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="change">change</string>
    <string name="ok">OK</string>
    <string name="create_account">Create Account</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="network_error">Network Error</string>
    <string name="success">Success</string>
    <string name="swipe_down_to_refresh">Swipe Down To Refresh</string>
    <string name="have_active_orders">You Have Active Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="view">view</string>
    <string name="basket_is_empty">Basket is Empty</string>
    <string name="write_something">write something…</string>
    <string name="order_details">Order Details</string>
    <string name="courier">Courier</string>
    <string name="favorites">Favorites</string>
    <string name="addresses">Addresses</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="sign_out">Sign Out</string>
    <string name="foodland_support">Foodland Support</string>
    <string name="online">online</string>
    <string name="past_orders">Past Orders</string>
    <string name="order_approved">Order Approved</string>
    <string name="cooking">Cooking</string>
    <string name="on_the_way">On The Way</string>
    <string name="estimated_arrival_time_5_mins">Estimated arrival time: 5 mins</string>
    <string name="email_password_incorrect">E-mail or password is incorrect</string>
    <string name="default_notification_channel_id" translatable="false">default_noti</string>
    <string name="order_again">Order Again</string>
    <string name="add_new_address">Add new address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="use_this_location">Use this location</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Location required</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="address_title">Address Title</string>
    <string name="address_detail">Address Detail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_saved">Address Saved</string>
    <string name="edit">Edit</string>
    <string name="select_address">Select Address</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="card_number">Card Number</string>
    <string name="holder_name">Holder Name</string>
    <string name="xxxx_xxxx_xxxx_xxxx" translatable="false">xxxx-xxxx-xxxx-xxxx</string>
    <string name="john_smith">JOHN SMITH</string>
    <string name="new_credit_card">New Credit Card</string>
    <string name="expire_date">Expire Date</string>
    <string name="required">Required</string>
    <string name="password_match_error">Passwords are not matching</string>
</resources>