<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.yudistudios.foodland.ui.activities.main.viewmodels.HomeViewModel" />

        <variable
            name="adapter"
            type="com.yudistudios.foodland.ui.adapters.FoodRecyclerViewAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.main.fragments.HomeFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="8dp"
                android:animateLayoutChanges="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_search"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="@{viewModel.showSearchEditText ? View.VISIBLE : View.INVISIBLE}"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/custom_input"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/search_text_tint"
                    android:textColorHint="@color/search_text_tint"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_search"
                    app:layout_constraintEnd_toStartOf="@id/imageView_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/logo"
                    android:visibility="@{viewModel.showSearchEditText ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_search"
                    app:layout_constraintEnd_toStartOf="@id/imageView_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_search"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:onClick="@{() -> viewModel.searchButtonOnClick()}"
                    android:src="@drawable/ic_search"
                    app:layout_constraintEnd_toStartOf="@id/imageView_sort"
                    app:layout_constraintStart_toEndOf="@id/editText_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?colorPrimary" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_sort"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_slider"
                    android:padding="9dp"
                    app:tint="?colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.showSortMenuOnClick()}"
                    app:layout_constraintBottom_toBottomOf="@id/editText_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/editText_search" />

                <LinearLayout
                    android:id="@+id/linearLayout_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/imageView_logo"
                    app:layout_constraintTop_toBottomOf="@id/imageView_logo">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_price_none"
                            style="@style/Custom.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/none"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_price_lower"
                            style="@style/Custom.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lower"
                            android:textSize="14sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_price_higher"
                            style="@style/Custom.Chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/higher"
                            android:textSize="14sp" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RelativeLayout
                android:id="@+id/layout_active_orders"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="?colorPrimary"
                android:elevation="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/have_active_orders"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_left_circle"
                    android:padding="4dp"
                    android:text="@string/view"
                    android:onClick="@{() -> viewModel.viewOrdersButtonOnClick()}"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="?colorSecondary"
                    app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                    app:iconGravity="end"
                    app:iconPadding="0dp"
                    app:iconSize="22dp" />
            </RelativeLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_favorites"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorites" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_2"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meals" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_3"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drinks" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_4"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desserts" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_5"
                        style="@style/Custom.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adapter="@{adapter}"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="swipe_down.json"
            app:lottie_loop="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_down_to_refresh"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animationView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>