<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:clickable="true"
            android:layout_margin="2dp"
            android:focusable="true"
            android:elevation="16dp"
            app:contentPadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="8dp"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/order"
                    tools:text="2022.03.13 20.14"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView_date"
                    app:layout_constraintBottom_toBottomOf="@id/textView_date"
                    app:tint="@color/black" />

                <ImageView
                    android:id="@+id/imageView_step_1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/bg_stepper_completed"
                    app:layout_constraintTop_toBottomOf="@id/textView_date"
                    app:layout_constraintStart_toStartOf="@id/textView_date"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/imageView_step_1"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_step_1"
                    app:layout_constraintStart_toEndOf="@id/imageView_step_1"
                    android:text="@string/order_approved"/>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:background="?colorPrimary"
                    app:layout_constraintStart_toStartOf="@id/imageView_step_1"
                    app:layout_constraintEnd_toEndOf="@id/imageView_step_1"
                    app:layout_constraintTop_toBottomOf="@id/imageView_step_1"/>

                <ImageView
                    android:id="@+id/imageView_step_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/bg_stepper_completed"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:layout_constraintStart_toStartOf="@id/textView_date"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/imageView_step_2"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_step_2"
                    app:layout_constraintStart_toStartOf="@id/textview1"
                    android:text="@string/cooking"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:background="?colorPrimary"
                    app:layout_constraintStart_toStartOf="@id/imageView_step_2"
                    app:layout_constraintEnd_toEndOf="@id/imageView_step_2"
                    app:layout_constraintTop_toBottomOf="@id/imageView_step_2"/>

                <ImageView
                    android:id="@+id/imageView_step_3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/bg_stepper_not_complete"
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    app:layout_constraintStart_toStartOf="@id/textView_date"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/imageView_step_3"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_step_3"
                    app:layout_constraintStart_toStartOf="@id/textview1"
                    android:text="@string/on_the_way"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>